--- a/src/functional_components/Drive/Drive.module.scss
+++ b/src/functional_components/Drive/Drive.module.scss
@@ -41,6 +41,7 @@
 
 @media (max-width: $screen_l) {
     .mainArea {
+        width: calc(100%-32px);
         height: max-content;
         padding: 0 16px;
         padding-bottom: 8em;
@@ -53,8 +54,8 @@
     }
 
     .container {
+        width: 100%;
         overflow-y: initial;
-        padding-top: initial;
-        padding-bottom: 1em;
+        padding-bottom: 64px;
     }
 }
