--- a/src/functional_components/File/File.module.scss
+++ b/src/functional_components/File/File.module.scss
@@ -109,9 +109,19 @@
 
 @media (max-width: $screen_l) {
     .gridCell {
-        height: 128px;
-        width: 108px;
-        justify-self: center;
+        height: 144px;
+        flex: 0 1;
+        flex-basis: calc((100% - 16px) / 3);
+        grid-gap: initial;
+        margin-bottom: 8px;
+    }
+
+    .gridCell + .gridCell {
+        margin-left: 8px;
+    }
+
+    .gridCell:nth-child(3n + 1) {
+        margin-left: initial;
     }
 
     .labelContainer {
