--- a/src/functional_components/Navigation/Navigation.module.scss
+++ b/src/functional_components/Navigation/Navigation.module.scss
@@ -145,7 +145,6 @@
 
     .container {
         border-radius: initial;
-        height: 70px;
         grid-template-columns: 16px 50px 9fr 40px 16px;
     }
 
