--- a/src/functional_components/SearchPage/SearchPage.module.scss
+++ b/src/functional_components/SearchPage/SearchPage.module.scss
@@ -31,4 +31,12 @@
     .container {
         padding: 0 16px;
     }
+
+    .section {
+      margin-bottom: 160px;
+    }
+
+    .sectionLabel {
+      display: none;
+    }
 }
