--- a/src/functional_components/Window/Window.module.scss
+++ b/src/functional_components/Window/Window.module.scss
@@ -20,10 +20,10 @@
 }
 
 .spinner {
-  display: flex;
-  height: 80%;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    height: 80%;
+    justify-content: center;
+    align-items: center;
 }
 
 .wrapper {
@@ -31,9 +31,9 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 100vh;
     width: 100vw;
-    z-index: 11;
+    z-index: 99;
     background: rgba($color: #000, $alpha: 0.2);
 }
 
@@ -87,13 +87,14 @@
 
     .container {
         border: none;
+        border-radius: 0;
         top: initial;
         left: 0;
         transform: initial;
         min-width: initial;
         max-width: initial;
-        width: 100%;
-        min-height: 80%;
+        width: 100vw;
+        height: 100vh;
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
     }
